--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
 </html>
 <html lang="pt-br">
 <head>
@@ -49,3 +47,4 @@ O Java Script é uma linguagem de programação.
                         </div>
                             
          </article>
+         <body>
