--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+<section>id="container">
+<article class="cartao">
+    <div>class="cartao__conteudo"
+            <h3>programação</h3>
+            <div class="cartao__conteudo__pergunta">
+                o que é javascript?
+            </div>
+        </div class="cartao__conteudo__responta">
+        o java script é uma linguagem de programação
+</article>
+<article class="cartao">
+    <div>class="cartao__conteudo"
+            <h3>programação</h3>
+            <div class="cartao__conteudo__pergunta">
+                o que é css?
+            </div>
+        </div class="cartao__conteudo__responta">
+        o java script é uma linguagem de estilização.
+</article>
+</section>
+    </main>
+    <footer>
+        <p>meu projeto do alura</p>
+    </footer>
 </body>
 </html>
