--- a/index.html
+++ b/index.html
@@ -3,35 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Flashcard</title>
 </head>
 <body>
     <main>
-<section>id="container">
-<article class="cartao">
-    <div>class="cartao__conteudo"
-            <h3>programação</h3>
-            <div class="cartao__conteudo__pergunta">
-                o que é javascript?
-            </div>
-        </div class="cartao__conteudo__responta">
-        o java script é uma linguagem de programação
-</article>
-<article class="cartao">
-    <div>class="cartao__conteudo"
-            <h3>programação</h3>
-            <div class="cartao__conteudo__pergunta">
-                o que é css?
-            </div>
-        </div class="cartao__conteudo__responta">
-        o java script é uma linguagem de estilização.
-</article>
-</section>
+        <section id="container">
+            <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é JavaScript?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>O JavaScript é uma linguagem de programação</p>
+                    </div>
+                </div>
+            </article> -->
+        </section>
     </main>
     <footer>
-        <p>meu projeto do alura</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
-
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
